Fix flickering when flipping board

--- a/src/frontend/ChessGui/chess-gui.scss
+++ b/src/frontend/ChessGui/chess-gui.scss
@@ -4,7 +4,7 @@
     }
 
     &__board {
-        max-width: 600px;
+        max-width: 602px;
         margin: 0 auto;
     }
 } 
